# Carbrain

./: .atom-build.yml
src/common/: CMakeLists.txt  package.xml  rosconsole_config.conf  rosdoc.yaml
src/common/cfg/: ParameterHandlerTest.cfg
src/common/launch/: parameter_handler.launch  parameter_handler.test  test_nodelet_load.test
src/common/scripts/: rosbag_nodebase.py
src/common/src/: bresenham.cpp  camera_transformation.cpp  pca_eigen.cpp  realtime_timings.cpp  realtimecontroller.cpp  runtime_analyzer.cpp  self_tests.cpp  static_transform_publisher.cpp
src/common/test/: test_adaptors.cpp  test_angle_conversions.cpp  test_basic_statistics.cpp  test_basic_statistics_eigen.cpp  test_best_score.cpp  test_bresenham.cpp  test_camera_transformation.cpp  test_concurrent_queue.cpp  test_containers.cpp  test_contains.cpp  test_discretisize_polynomial.cpp  test_dummy_parameter_handler.cpp  test_eigen_adaptors.cpp  test_eigen_transform.cpp  test_eigen_utils.cpp  test_indirect_sort.cpp  test_math.cpp  test_minmax_element.cpp  test_nodelet_loader.cpp  test_normal_shift.cpp  test_parameter_handler.cpp  test_path.cpp  test_path_conversion.cpp  test_pca_eigen.cpp  test_polynomial.cpp  test_polynomial_utils.cpp  test_polynomialfit.cpp  test_simultaneous_sort.cpp  test_type_to_string.cpp
src/control/: CMakeLists.txt  nodelet_plugins.xml  package.xml  rosdoc.yaml
src/control/cfg/: LateralController.cfg  LongitudinalController.cfg  SpeedController.cfg  SteeringController.cfg
src/control/include/: high_level_controller_helper.h
src/control/launch/: control.launch  control_dr_drift.launch  control_fast_and_furious.launch  lateral_controller_node.launch  longitudinal_controller_node.launch  speed_controller_node.launch  steering_controller_node.launch
src/control/rosconsole/: control.conf
src/controller_interface/: CMakeLists.txt  nodelet_plugins.xml  package.xml  rosdoc.yaml  test.launch
src/controller_interface/include/: selftest_strings.h
src/controller_interface/launch/: controller_interface.launch  controller_interface_node.launch  second_controller_interface_node.launch
src/controller_interface/protobuf/: CMakeLists.txt
src/controller_interface/src/: selftest_strings.cpp
src/controller_interface/test/: test_command_handler.cpp
src/kitcar/: CMakeLists.txt  package.xml  rosdoc.yaml
src/kitcar/launch/: master.launch
src/kitcar/scripts/: bag_check.py  crop_bag.py  debug_args.py  rosbag_lp_play.sh  rosbag_play.sh  rosbag_record.sh
src/messages/common_msgs/: CMakeLists.txt  package.xml  rosdoc.yaml
src/messages/lateral_controller_msgs/: CMakeLists.txt  package.xml  rosdoc.yaml
src/messages/longitudinal_controller_msgs/: CMakeLists.txt  package.xml  rosdoc.yaml
src/messages/mission_control_msgs/: CMakeLists.txt  package.xml
src/messages/navigation_msgs/: CMakeLists.txt  package.xml  rosdoc.yaml
src/messages/perception_msgs/: CMakeLists.txt  package.xml  rosdoc.yaml
src/messages/pixelwise_mask_generation_msgs/: CMakeLists.txt  package.xml  rosdoc.yaml
src/messages/state_estimation_msgs/: CMakeLists.txt  package.xml  rosdoc.yaml
src/mission_control/: CMakeLists.txt  nodelet_plugins.xml  package.xml  rosdoc.yaml
src/mission_control/launch/: free_drive_pavlov_node.launch  mission_control.launch  mission_controller_node.launch  obstacle_pavlov_node.launch  parking_mc_node.launch  pavlov.test
src/mission_control/scripts/: parking_mc.py
src/mission_control/srv/: StartParkingDiscipline.srv
src/mission_control/test/: test_free_drive_pavlov.cpp  test_obstacle_pavlov.cpp
src/navigation/: CMakeLists.txt  mainpage.dox  manifest.json  nodelet_plugins.xml  package.xml  rosdoc.yaml
src/navigation/cfg/: CollisionDetection.cfg  Localization.cfg  PathPlanning.cfg  PathPreprocessing.cfg
src/navigation/launch/: blinker_node.launch  collision_detection_node.launch  environmental_model_node.launch  find_parking_slot_node.launch  localization_node.launch  navigation.launch  parking_node.launch  parkinglot_aligner_node.launch  path_planning_node.launch  path_preprocessing_node.launch
src/navigation/rosconsole/: navigation.conf
src/navigation/test/: test_blinker.cpp  test_boundingbox.cpp  test_collision_detection.cpp  test_driving_corridor.cpp  test_environmental_model.cpp  test_gate.cpp  test_gate_utils.cpp  test_line_segment.cpp  test_node_path_planning.cpp  test_obstacle.cpp  test_one_d_parkinglot_mapper.cpp  test_parking_solver.cpp  test_parkinglot_aligner.cpp  test_triangle.cpp  test_vehicle.cpp
src/perception/: CMakeLists.txt  nodelet_plugins.xml  package.xml  rosdoc.yaml
src/perception/cfg/: ParkinglotMappingNode.cfg  PreprocessingBinarisation.cfg  PreprocessingMaskMode.cfg  PreprocessingMedianBlur.cfg  PreprocessingPixelwiseMask.cfg  PreprocessingRoi.cfg  PreprocessingTrapezoidMask.cfg  RoadWatcher.cfg
src/perception/include/: distinct_colors.h  line_vehicle_points.h  opencv_eigen_conversions.h  opencv_utils.h  perception_message_conversions.h  perception_types.h  roi_birds_view_transformation.h  scan_line.h  vehicle_point_conversions.h  vehicle_scan_line.h
src/perception/launch/: camera.launch  extrinsic_calibration_node.launch  lane_detection_node.launch  look_at_node.launch  parkinglot_mapping_node.launch  perception.launch  perpendicular_parking_node.launch  pixelwise_mask_generation_node.launch  preprocessing_node.launch  qr_code_detection_node.launch  road_watcher_node.launch
src/perception/rosconsole/: perception.conf
src/perception/scripts/: visualize_contour_template.py
src/perception/test/: CMakeLists.txt  contour_classifier_test.cpp  dbscan_clusterer_test.cpp  distinct_colors_test.cpp  hungarian_algorithm_test.cpp  road_watcher_object_tracker_test.cpp  step_detection_test.cpp  test_base_area_classification.cpp  test_foot_finder.cpp  test_look_at.cpp  test_parkinglot_map.cpp  test_scan_line.cpp
src/state_estimation/: CMakeLists.txt  nodelet_plugins.xml  package.xml  rosdoc.yaml
src/state_estimation/cfg/: StateEstimation.cfg
src/state_estimation/include/: .gitignore
src/state_estimation/launch/: state_estimation.test  (+2 more)
(+1028 files in other folders)
