<?xml version="1.0"?>
<package>
  <name>controller_interface</name>
  <version>0.0.1</version>
  <description>The controller_interface package handles all communication from and to the car controller, especially sensor states and actor commands</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="marek.wehmer@student.kit.edu">Marek Wehmer</maintainer>
  <maintainer email="Pio_Orzechowski@gmx.com">Piotr Orzechowski</maintainer>

  <url>https://wiki.kitcar-team.de/doku.php?id=konzept_und_umsetzung:controller_interface:start</url>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/controller_interface</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kitcar_cmake</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>longitudinal_controller_msgs</build_depend>
  <build_depend>lateral_controller_msgs</build_depend>
  <build_depend>state_estimation_msgs</build_depend>
  <build_depend>controller_msgs</build_depend>
  <build_depend>common</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>control</build_depend>
 

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>longitudinal_controller_msgs</run_depend>
  <run_depend>lateral_controller_msgs</run_depend>
  <run_depend>state_estimation_msgs</run_depend>
  <run_depend>controller_msgs</run_depend>
  <run_depend>common</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>control</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
    <rosdoc config="rosdoc.yaml" />
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
